--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@
 # General Settings:
 jobname: NeoChrIII
 chromosome: "03"
-target: "input/neochr_URA3.gb" 
+target: "neochr_URA3.gb"
 
 # Paths:
 home: /home/Primer/PrimerDesigner
